v1.0:
First Release
v1.1:
Implemented Permissions