@@ -2,3 +2,4 @@ v1.0:
 First Release
 v1.1:
 Implemented Permissions
+Adds new players to default group automatically
